# bionlp2026

./: .gitignore  README.md  pyproject.toml  run.py
prompts/: class_advocate.txt  clinical_analyst.txt  deliberation_moderator.txt  mechanism_specialist.txt  pairwise_resolver.txt  pattern_analyst.txt  rules_confusion_watchlist.txt  rules_handbook.txt  rules_l7_gate.txt
src/: config.py  council.py  evaluate.py  retriever.py
